# okto-nsd

./: CMakeLists.txt  README.md  main.c  nsd.service
inc/: client_thread.h  cmd_processor.h  logger.h
libs/collections/src/: map2.c  rings.c
src/: client_thread.c  cmd_processor.c  logger.c
